Clean Up, Consolidate Video Player Component; Add Loop, Autoplay, and Hidden Controls Options (#543)
* refactor: rename brightcove meta Sass to video meta

* chore: remove old brightcove + video files no longer needed

* refactor: combine together video Twig template with original Brightcove Twig template; add new Twig options and defaults for autoplay, controls, and loop

* chore: remove old fixture no longer needed from Brightcove player

* refactor: rename brightcove meta to video meta

* refactor: rename _video.scss to video.scss

* refactor: finish renaming Brightcove Meta to Bolt Video Meta

* refactor: rename BrightcoveVideo to BoltVideo

* chore: remove remaining references to brightcove player to switch everything over to use consolidated video component

* refactor: consolidating Sass for brightcove + video player

* feat: adding ability to hide controls, loop, and autoplay videos

* docs: adding demos of new autoplay, loop, and "no-controls" options

* chore: slightly speed up transition speed of band animation

* refactor: removing old video player CSS no longer used or needed

* refactor: remove extra 40px of space getting added to band height calculation -- getting handled at the video player level so this is no longer necessary

* chore: removing extra RAF we no longer need

* refactor: cleaning up band height animation so we don't animate to a height smaller than the initial min-height we started out

* refactor: update video meta to animate via transform, not display: none

* refactor: set max height of video when expanded height value being set

* refactor: add CSS class to video player when getting used as a background video

* fix: correct center alignment of icon only button icon

* chore: commenting out original video attributes reassignment logic. no longer appears to be needed -- keeping around till we can test to 100% verify prior to fully removing

--- a/packages/components/bolt-video/src/_video-meta.scss
+++ b/packages/components/bolt-video/src/_video-meta.scss
@@ -5,18 +5,22 @@ $bolt-export-data: false !global;
 // Same as max-width of wrapper container
 $bolt-video-meta--max-width: bolt-breakpoint(xxlarge);
 
-.c-brightcove-meta {
-  max-width: $bolt-video-meta--max-width;
-}
-
-.c-brightcove-meta__wrapper {
-  @include bolt-padding(medium, squished);
-  @include bolt-font-size(xsmall);
+bolt-video-meta {
+  transition: transform 0.2s ease, opacity 0.2s ease;
+  transform: translate3d(0, 0, 0);
+  opacity: 1;
+  display: block;
 
   position: absolute;
   left: 0;
   right: 0;
   bottom: 0;
+}
+
+.c-bolt-video-meta__wrapper {
+  @include bolt-padding(medium, squished);
+  @include bolt-font-size(xsmall);
+
   background-color: rgba(bolt-color(indigo), 0.8);
   color: bolt-color(white);
 }
