fix type on text transform

--- a/packages/components/bolt-headline/src/_typography.twig
+++ b/packages/components/bolt-headline/src/_typography.twig
@@ -4,7 +4,7 @@
 {% set tags = schema.properties.tag.enum|remove_null %}
 {% set weights = schema.properties.weight.enum|remove_null %}
 {% set styles = schema.properties.style.enum|remove_null %}
-{% set tranformProps = schema.properties.transform.enum|remove_null %}
+{% set transformProps = schema.properties.transform.enum|remove_null %}
 {% set sizes = schema.properties.size.enum|remove_null %}
 {% set alignments = schema.properties.align.enum|remove_null %}
 
