--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/dropdown--collapse.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/dropdown--collapse.twig
@@ -1,5 +1,7 @@
 {% embed "@bolt-components-dropdown/01-dropdown.twig" with {
-  title: "Toggle Menu"
+  title: "Toggle Menu",
+  isOpen: true,
+  collapse: true
 } %}
   {% block content %}
     <bolt-nav-list offset="50">
