--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/dropdown-center.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/dropdown-center.twig
@@ -2,7 +2,7 @@
   title: "Toggle Menu",
   center: true
 } %}
-  {% block children %}
+  {% block content %}
     <bolt-nav-list offset="50">
       <ul class="c-bolt-nav-list c-bolt-nav-list--xsmall js-bolt-nav-list-gumshoe">
         <li class="c-bolt-nav-list__item">
