--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/01-dropdown-custom-element.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/01-dropdown-custom-element.twig
@@ -1,4 +1,8 @@
-{% set content %}
+<bolt-dropdown
+  center
+  toggle-text="{{ toggleText | default("Toggle Dropdown") }}"
+  >
+
   <bolt-nav-list offset="50">
     <ul class="c-bolt-nav-list c-bolt-nav-list--xsmall js-bolt-nav-list-gumshoe">
       <li class="c-bolt-nav-list__item">
@@ -18,12 +22,15 @@
           </a>
         </bolt-nav-link>
       </li>
+      <li class="c-bolt-nav-list__item">
+        <bolt-nav-link>
+          <a class="c-bolt-nav-link" href="#p-6618d817-126e-46d1-955a">Customer Success
+          </a>
+        </bolt-nav-link>
+      </li>
+
       <li class="c-bolt-nav-list__indicator js-bolt-nav-indicator" style="transform: translateX(0px); width: 0px;"></li>
     </ul>
   </bolt-nav-list>
-{% endset %}
 
-{% include "@bolt-components-dropdown/01-dropdown.twig" with {
-  title: "Toggle Menu",
-  content: content
-} %}
+</bolt-dropdown>
