--- a/apps/pattern-lab/src/_patterns/04-pages/80-pega-world/pega-world.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/80-pega-world/pega-world.twig
@@ -244,7 +244,7 @@
             <div class="c-pw-stat-slideshow-media__embed">
               <bolt-video
                 data-setup="{&quot;techOrder&quot;: [&quot;Html5&quot;]}"
-                video-id="5750064959001"
+                video-id="5759311957001"
                 player-id="r1CAdLzTW"
                 account-id="1900410236"
                 autoplay
@@ -261,7 +261,7 @@
                 <li class="c-pw-stat-list__item">
                   {% include "@bolt/headline.twig" with {
                     "size": "xxxlarge",
-                    "text": "30% ~ 50%",
+                    "text": "30% – 50%",
                     "tag": "div"
                   } only %}
                   {% include "@bolt/text.twig" with {
