remove legacy paragraph.twig

--- a/apps/pattern-lab/src/_patterns/04-pages/60-d8-homepage/-20-d8-homepage-video-test.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/60-d8-homepage/-20-d8-homepage-video-test.twig
@@ -302,7 +302,7 @@
                 tag: "h3"
               } only %}
 
-              {% include "@bolt/paragraph.twig" with {
+              {% include "@bolt/text.twig" with {
                 text: "Considering Salesforce.com? Don’t fall for the hype. See why today’s leading enterprises choose Pega CRM."
               } only %}
 
