todos for salem in headline and subheadline

--- a/packages/components/bolt-headline/src/subheadline.twig
+++ b/packages/components/bolt-headline/src/subheadline.twig
@@ -1,6 +1,7 @@
 {% extends "@bolt/_typography.twig" %}
-{% set tags = ["h1", "h2", "h3", "h4", "h5", "h6", "p", "span"] %} {# Allowed Tags #}
 {% set type = "subheadline" %}
+{# @todo @Salem, not sure if span should be allowed or not. There should not be two overrides of tags here. See headline as well #}
+{% set tags = ["h1", "h2", "h3", "h4", "h5", "h6", "p", "span"] %} {# Allowed Tags #}
 {% set tags = [
   "h1",
   "h2",
