--- a/apps/pattern-lab/src/_includes/utils/schema-docs.twig
+++ b/apps/pattern-lab/src/_includes/utils/schema-docs.twig
@@ -139,11 +139,15 @@
             <td class="c-bolt-docs-table__col">{{ macros.titleAndDescription(prop.title, prop.description, prop.minimum, prop.maximum) }}</td>
 
             <td class="c-bolt-docs-table__col">
-              {% if prop.default %}
-                <code>{{ prop.default }}</code>
-              {% else %}
-                -
-              {% endif %}
+              <code>
+                {% if prop.default == false %}
+                  False
+                {% elseif prop.default == 'true' %}
+                  True
+                {% else %}
+                  {{ prop.default }}
+                {% endif %}
+              </code>
             </td>
           </tr>
         {% endfor %}
