--- a/apps/pattern-lab/src/_patterns/04-pages/80-events/event-detail.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/80-events/event-detail.twig
@@ -6,17 +6,14 @@
 
 {% block main_content %}
 
-  {% embed "@bolt/band--feature.twig" with {
-    teaserPosition: "left",
-    teaserWidth: "2/3",
+  {% embed "@bolt/band.twig" with {
     size: "medium",
-    full: true,
-    theme: "xdark",
-
-    primaryTeaser: {
-      headlines: [
-        {
-          type: "headline",
+    theme: "xdark"
+  } only %}
+    {% block band_content  %}
+    {% grid "o-bolt-grid--flex o-bolt-grid--large o-bolt-grid--middle o-bolt-grid--matrix" %}
+      {% cell 'u-bolt-width-1/1 u-bolt-width-2/3@medium' %}    
+      {% include "@bolt/headline.twig" with {
           text: "Pega Events",
           size: "xsmall",
           tag: "span",
@@ -25,68 +22,61 @@
             name: "arrow-left",
             position: "before"
           }
-        },
-        {
-          type: "headline",
+      } only %}
+
+      {% include "@bolt/headline.twig" with {
           text: "CRM Applications for Real-Time Engagement",
           size: "xxxlarge",
-          tag: "h1"
-        },
-        {
-          type: "subheadline",
+          tag: "h1",
+      } only %}
+
+      {% include "@bolt/subheadline.twig" with {
           text: "Pega’s AI powered CRM Suite is transforming the way enterprises drive greater engagement across the entire customer journey.",
           size: "xlarge",
-          tag: "p"
-        },
-        {
-          type: "headline",
-          text: "Date",
-          size: "large",
-          tag: "span",
-          url: "/events",
-          icon: {
-            name: "calendar",
-            position: "before"
-          }
-        },
-        {
-          type: "headline",
-          text: "Time",
-          size: "large",
-          tag: "span",
-          url: "/events",
-          icon: {
-            name: "watch",
-            position: "before"
-          } 
-        },
-        {
-          type: "headline",
-          text: "Location",
-          size: "large",
-          tag: "span",
-          url: "/events",
-          icon: {
-            name: "map-pin",
-            position: "before"
-          } 
-        }        
-      ],
-    }
-  } only %}
-    {% block primary_teaser %}
-    {{ parent() }}
-       {% include "@bolt/headline.twig" with {
-          text: "CRM Applications for Real-Time Engagement",
-          size: "xxlarge",
-          tag: "h2",
-          attributes: {
-            class: "u-bolt-margin-top-large"
-          }
-        } only %}
+          tag: "p",
+      } only %}
+        {% grid %}
+          {% cell 'u-bolt-width-1/1 u-bolt-width-1/3@small u-bolt-margin-bottom-small' %}
+          {% include "@bolt/headline.twig" with {
+              text: "January 25, 2018",
+              size: "large",
+              tag: "span",
+              url: "#",
+              icon: {
+                name: "calendar",
+                position: "before"
+              },
+            } only %}
+          {% endcell %}
+          {% cell 'u-bolt-width-1/1 u-bolt-width-1/3@small u-bolt-margin-bottom-small' %}
+          {% include "@bolt/headline.twig" with {
+              text: "10:00 AM EST",
+              size: "large",
+              tag: "span",
+              url: "#",
+              icon: {
+                name: "watch",
+                position: "before"
+              }
+            } only %}
+          {% endcell %}
+          {% cell 'u-bolt-width-1/1 u-bolt-width-1/3@small u-bolt-margin-bottom-small' %}
+          {% include "@bolt/headline.twig" with {
+              text: "New York, NY",
+              size: "large",
+              tag: "span",
+              url: "#", 
+              icon: {
+                name: "map-pin",
+                position: "before"
+              }
+            } only %}
+          {% endcell %}
+        {% endgrid %}    
+      {% endcell %}
+    {% endgrid %}
     {% endblock %}
   {% endembed %}
-
 
  {% embed "@bolt/band.twig" with {
     size: "small",
