--- a/apps/pattern-lab/src/_meta/_00-head.twig
+++ b/apps/pattern-lab/src/_meta/_00-head.twig
@@ -7,6 +7,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
 
+    <!-- Default OG Tag examples -->
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Bolt Design System: Page Title" />
+    <meta property="og:description" content="Sample description" />
+    <meta property="og:image" content="https://bolt-design-system.com/images/500x500-480.jpg" />
+    <meta property="og:url" content="http://bolt-design-system.com/" />
+    <meta property="og:site_name" content="Bolt Design System" />
+
+    <!-- Twitter specific meta tags -->
+    <meta name="twitter:title" content="Bolt Design System: Page Title">
+    <meta name="twitter:description" content="Sample description">
+    <meta name="twitter:image" content="https://bolt-design-system.com/images/500x500-480.jpg">
+    <meta name="twitter:site" content="@pega">
+    <meta name="twitter:creator" content="@pega">
+
     <link rel="stylesheet" href="{{ assets["bolt-global.css"] }}?cachebuster="{{ cacheBuster }}" media="all" />
 
 
